# dma-sg-cxx-project

./: CMakeLists.txt  README.md
dma-sg/: dma_controller.cpp
include/: dma_controller.h  reg_rw.h
test/: test.cpp
tools/: reg_rw.c
